# dummy

./: .gitignore  CMakeLists.txt
app/: cli.c  cli.h  main.c
lib/: cart.c  cart.h  common.c  common.h  cpu.c  cpu.h  emu.c  emu.h  executor.c  executor.h  instruction.c  instruction.h  mem.c  mem.h  ram.c  ram.h
tools/cim/: build.gradle.kts  readme.md  settings.gradle.kts
tools/cim/gradle/wrapper/: gradle-wrapper.properties
tools/cim/src/main/kotlin/: Main.kt  Mapper.kt  j2c.kt  mappings.kt
tools/cim/src/main/resources/: opcodes.json
